# tkyo-spaghetti

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  README.md  index.html  tkyospaghetti.html  unused.cpp
cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: Animator.hpp  IAnimatable.hpp  ICollidable.hpp  IGameObject.hpp  IMovable.hpp  IPlatform.hpp  IPlatformRectangles.hpp  IPlayer.hpp  IScore.hpp  IText.hpp  IVisible.hpp
resources/: License.txt
src/: Platform.cpp  Player.cpp  Score.cpp  Text.cpp  animator.cpp  main.cpp
